# dig-or-die-mods

./: .editorconfig  .gitattributes  .gitignore  DevEnv.targets.template  Directory.Build.props  Generate-DevEnv.ps1  Install-BepInEx.ps1  README.md  dod-proto.lua  dod-save.hexpat
.github/workflows/: gh-pages.yml
debug-mode/: .gitignore  DebugMode.cs
dig-or-die-libs/: .gitignore  get.ps1
dod-decomp/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  funcs.hpp  main.cpp  types.hpp  vars.hpp
dod-server/: .gitignore  LZF.cs  Logging.cs  Main.cs  MessageProcessing.cs  NetworkClients.cs  README.md  ServerConfig.cs  Utils.cs  dod-server.csproj
dod-server/GameEngine/: Buffer.cs  Bullets.cs  Game.cs  ItemTypes.cs  Items.cs  Mode.cs  NumericTypes.cs  Pickup.cs  Player.cs  Random.cs  Save.cs  UnitTypes.cs  Units.cs  Vars.cs  World.cs
dod-server/NetworkMessages/: CustomMessagePlayerSession.cs  INetworkMessage.cs  MessageCamFormat.cs  MessageChat.cs  MessageDoDamage.cs  MessageInventory.cs  MessageItemActivate.cs  MessageItemUse.cs  MessageItemsBar.cs  MessageMonsterChangeTarget.cs  MessageOneBlock.cs  MessagePickups.cs  MessagePing2.cs  MessagePlayerInfos.cs  MessagePlayerPos.cs  MessagePong2.cs  MessageRemoveUnit.cs  MessageRequestBuild.cs  MessageRequestBuildWire.cs  MessageRequestCraft.cs  MessageRequestDig.cs  MessageRequestThrow.cs  MessageServerWorld_OnChange.cs  MessageServerWorld_Water.cs  MessageSpawnUnit.cs  MessageStartInfos.cs  MessageUnitsPos.cs  SMessageMonstersAttack.cs
examples/adding-custom-item/: .gitignore  Plugin.cs  adding-custom-item.csproj
friendly-fire/: .gitignore  FriendlyFire.cs  Plugin.cs  friendly-fire.csproj
more-items/: .gitignore  Items.cs  ModResources.Designer.cs  ModResources.resx  Patches.cs  Plugin.cs  make-textures.ps1  more-items.csproj
more-items/Resources/: textures
plugins/: .gitignore  Directory.Build.props  Directory.Build.targets  create-plugin.ps1
plugins/achievement-enabler/: .gitignore  Plugin.cs  README.md  achievement-enabler.csproj
plugins/autosave-tweaks/: .gitignore  Plugin.cs  README.md  autosave-tweaks.csproj
plugins/better-chat/: .gitignore  Commands.cs  ExpressionEvaluator.cs  Patches.cs  Plugin.cs  README.md  better-chat.csproj
plugins/cell-picker/: .gitignore  Plugin.cs  README.md  cell-picker.csproj
plugins/debug-mode/: .gitignore  DebugMode.cs  Plugin.cs  README.md  debug-mode.csproj
plugins/dedicated-client/: .gitignore  Plugin.cs  README.md  dedicated-client.csproj
plugins/enable-asserts/: .gitignore  EnableAsserts.cs  Plugin.cs  README.md  enable-asserts.csproj
plugins/extra-commands/: .gitignore  (+3 more)
site/: index.html
tools/: .gitignore  Directory.Build.props
tools/world-viewer/: .gitignore  Cargo.toml  index.html
tools/world-viewer/assets/: sw.js
tools/world-viewer/src/: app.rs  main.rs  save_model.rs  sprites_info.rs  world_view.rs
tools/world-viewer/src/misc/: cs_binary.rs  cs_binfmt.rs  lzf2.rs  mod.rs
ultra-hardcore/: Plugin.cs  ultra-hardcore.csproj
utils-lib/: Extensions.cs  Utils.cs
(+90 files in other folders)
