[package]
name = "world_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = "0.34.1"
log = "0.4.27"
rfd = "0.17.2"
anyhow = "1.0.102"
image = { version = "0.25.10", default-features = false, features = ["png"] }
phf = { version = "0.13.1", features = ["macros"] }
# egui_field_editor = "0.3.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
futures = "0.3.32"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]  
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.70", default-features = false, features = ["Window", "Document"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[lints.rust]
dead_code = "allow"

[lints.clippy]
needless_return = "allow"
